Fixed shifting content on drop down box

--- a/packages/payment-gateway/src/assets/stylesheets/components/dropdown.scss
+++ b/packages/payment-gateway/src/assets/stylesheets/components/dropdown.scss
@@ -1,14 +1,24 @@
-.menu {
-    display: flex;
-    flex-direction: column;
-    
-    .button {
-        background-color: white;
-        border: none;
-        border-radius: 0.85em;
-        width: 100%;
-        padding: 1em 1em 1em 1em;
-    }
+.dropdown-container {
+    max-width: 100%;
 
-    
+    .menu {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        z-index: 1000;
+        //min-width: 100%;
+        box-sizing: border-box;
+        //max-width: 17.5em;
+        //width: 100%;
+        
+        /*.button {
+            background-color: black;
+            border: none;
+            border-radius: 0.85em;
+            width: 100%;
+            padding: 1em 1em 1em 1em;
+        }*/
+
+        
+    }
 }
